books,usersコントローラーの余分なnewアクション削除。ヘッダー部分のbootstrap機能で修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
       </ul>
 
       <% else %>
-      <ul class="list-left">
+      <ul class="nav navbar-nav navbar-right">
         <%= link_to root_path do %>
         <li class="glyphicon glyphicon-home" aria-hidden="true">Home</li>
         <% end %>
