--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,7 +10,7 @@
 	<div class="row">
 
 		<div class="col-xs-3">
-			<%= render 'books/list',book: @book,user: current_user %>
+			<%= render 'books/list',book: @book, user: current_user %>
 		</div>
 
 
@@ -28,21 +28,29 @@
 						<th scope="col"><h2>Opinion</h2></th>
 					</tr>
 				</thead>
-
 				<tbody>
-
 					<% @books.each do |book| %>
 					<tr>
-			<th scope="row"><%= link_to user_path(book.user.id) do %><%= attachment_image_tag book.user, :profile_image, :fill, 100, 100,fallback: "noimage.png",size:'100x100' %><% end %> </th>
+					<th scope="row"><%= link_to user_path(book.user.id) do %><%= attachment_image_tag book.user, :profile_image, :fill, 100, 100,fallback: "noimage.png",size:'100x100' %><% end %> </th>
 						<td><%= link_to  book.title ,book_path(book.id) %></td>
 						<td><%= book.body %></td>
+						<td><% if book.favorited_by?(current_user) %>
+							<%= link_to book_favorites_path(book),method: :delete do %>
+								<i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+									<%= book.favorites.count %> いいね
+							<% end %>
+							<% else %>
+								<%= link_to book_favorites_path(book),method: :post do %>
+									<i class="fa fa-heart" aria-hidden="true"></i>
+										<%= book.favorites.count %> いいね
+								<% end %>
+							<% end %>
+						</td>
+						<td>コメント数:<%= book.comments.count %></td>
 					</tr>
-
 					<% end %>
 				</tbody>
-
 			</table>
-
 		</div>
 	</div>
 </div>
