--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,10 +19,26 @@
 							<%= link_to user_path(@book.user.id) do %>
 							<%= attachment_image_tag @book.user, :profile_image, :fill, 100, 100,fallback: "noimage.png",size:'100x100' %><br>
 							<%= @book.user.name %>
-							<% end %> 
+							<% end %>
 						</th>
-						<td><%= link_to  @book.title ,book_path(@book.id) %></th>
+						<td><%= link_to  @book.title ,book_path(@book.id) %></td>
 						<td><%= @book.body %></td>
+						<td>
+							<% if @book.favorited_by?(current_user) %>
+								<%= link_to book_favorites_path(@book),method: :delete do %>
+									<i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+									<%= @book.favorites.count %> いいね
+								<% end %>
+							<% else %>
+								<%= link_to book_favorites_path(@book),method: :post do %>
+									<i class="fa fa-heart" aria-hidden="true"></i>
+									<%= @book.favorites.count %> いいね
+								<% end %>
+							<% end %>
+						</td>
+								<td>コメント数:<%= @book.comments.count %></td>
+							
+
 
 
 
@@ -33,7 +49,56 @@
 					</tr>
 				</tbody>
 			</table>
+
+			<% @comments.each do |comment| %>
+			<div class="comment-text">
+				<span><%= comment.user.name %><br></span>
+				<span><%= comment.created_at.strftime('%Y/%m/%d') %><br></span>
+				<span><%= comment.comment %><br></span>
+				<% if current_user == comment.user %>
+				<span><%= link_to "削除", book_comment_path(book_id: @book.id, id: comment.id), method: :delete %><br></span>
+				<% end %>
+			</div>
+			<% end %>
+			<%= paginate @comments, class: "paginate" %>
+
+			<%= form_for [@book, @comment] do |f| %>
+				<%= f.text_area :comment %>
+				<%= f.submit "送信" ,class: "btn" %>
+			<% end %>
 		</div>
 	</div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
