--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -31,6 +31,37 @@
 	<span class="glyphicon glyphicon-wrench col-xs-12 btn btn-default" aria-hidden="true"></span>
 	<% end %>
 <% end %>
+<% user ||= current_user %>
+<div class="stats">
+  <a href="<%= following_user_path(user) %>">
+    <strong id="following" class="stat">
+      <%= user.followings.count %>
+    </strong>
+    フォロー中
+  </a>
+  <a href="<%= follower_user_path(user) %>">
+    <strong id="followers" class="stat">
+      <%= user.followers.count %>
+    </strong>
+    フォロワー
+  </a>
+</div>
+
+<% unless current_user == user %>
+  <% if current_user.following?(user) %>
+    <%= form_for(current_user.relationships.find_by(follow_id: user.id), html: { method: :delete }) do |f| %>
+      <%= hidden_field_tag :follow_id, user.id %>
+      <%= f.submit 'Unfollow', class: 'btn btn-danger btn-block' %>
+    <% end %>
+  <% else %>
+    <%= form_for(current_user.relationships.build) do |f| %>
+      <%= hidden_field_tag :follow_id, user.id %>
+      <%= f.submit 'Follow', class: 'btn btn-primary btn-block' %>
+    <% end %>
+  <% end %>
+<% end %>
+	
+
 
 
 
