--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -23,6 +23,38 @@
 						<th scope="row"><%= attachment_image_tag user, :profile_image, :fill, 100, 100, fallback: "noimage.png",size:'100x100'  %></th>
 						<td><%= user.name %></td>
 						<td><%= link_to"Show",user_path(user) %></td>
+						<td>
+
+											<% user ||= current_user %>
+											<div class="stats">
+											  <a href="<%= following_user_path(user) %>">
+											    <strong id="following" class="stat">
+											      <%= user.followings.count %>
+											    </strong>
+											    フォロー中
+											  </a>
+											  <a href="<%= follower_user_path(user) %>">
+											    <strong id="followers" class="stat">
+											      <%= user.followers.count %>
+											    </strong>
+											    フォロワー
+											  </a>
+											</div></td>
+
+														<td><% unless current_user == user %>
+								  <% if current_user.following?(user) %>
+								    <%= form_for(current_user.relationships.find_by(follow_id: user.id), html: { method: :delete }) do |f| %>
+								      <%= hidden_field_tag :follow_id, user.id %>
+								      <%= f.submit 'Unfollow', class: 'btn btn-danger btn-block' %>
+								    <% end %>
+								  <% else %>
+								    <%= form_for(current_user.relationships.build) do |f| %>
+								      <%= hidden_field_tag :follow_id, user.id %>
+								      <%= f.submit 'Follow', class: 'btn btn-primary btn-block' %>
+								    <% end %>
+								  <% end %>
+								<% end %>
+							</td>
 					</tr>
 					<% end %>
 				</tbidy>
