--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,7 +27,7 @@
 					<% @books.each do |book| %>
 
 					<tr>
-						<td><%= attachment_image_tag book.user, :profile_image, :fill, 100,100 %></td>_
+						<td><%= attachment_image_tag book.user, :profile_image, :fill, 100,100 %></td>
 						<td><%=link_to book.title ,book_path(book.id) %></td>
 						<td><%= book.body %></td>
 						<td>コメント数:<%= book.comments.count %></td>
