--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,50 +9,24 @@
 
 <div class="container">
 	<div class="row">
-
 		<div class="col-xs-3">
 			<%= render 'books/list',book: @book, user: current_user %>
 		</div>
-
-
-
 		<div class="col-xs-9">
-
 			<h1>Books</h1>
-
 			<table class="table">
-
-				<thead>
-					<tr>
-						<th scope="col">#</th>
-						<th scope="col"><h2>Title</h2></th>
-						<th scope="col"><h2>Opinion</h2></th>
-					</tr>
-				</thead>
-				<tbody>
-					<% @books.each do |book| %>
-					<tr>
-					<th scope="row"><%= link_to user_path(book.user.id) do %><%= attachment_image_tag book.user, :profile_image, :fill, 100, 100,fallback: "noimage.png",size:'100x100' %><% end %> </th>
-						<td><%= link_to  book.title ,book_path(book.id) %></td>
-						<td><%= book.body %></td>
-						<td><% if book.favorited_by?(current_user) %>
-							<%= link_to book_favorites_path(book),method: :delete do %>
-								<i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
-									<%= book.favorites.count %> いいね
-							<% end %>
-							<% else %>
-								<%= link_to book_favorites_path(book),method: :post do %>
-									<i class="fa fa-heart" aria-hidden="true"></i>
-										<%= book.favorites.count %> いいね
-								<% end %>
-							<% end %>
-						</td>
-						<td>コメント数:<%= book.comments.count %></td>
-
-						
-					</tr>
-					<% end %>
-				</tbody>
+				<tr>
+					<th>#</th>
+					<th><h2>Title</h2></th>
+					<th><h2>Opinion</h2></th>
+					<th><h2>like</h2></th>
+					<th><h2>comment</h2></th>
+				</tr>
+				<% @books.each do |book| %>
+				  <tr class="book<%= book.id %>-box">
+				    <%= render "books/link",book:book %>
+				  </tr>
+				<% end %>
 			</table>
 		</div>
 	</div>
